# zcdemlops

./: main.py  pyproject.toml
week1/: README.md  week1.qmd
week1/train_model/: duration_predicion.ipynb  duration_prediction_yellow.ipynb  functions.py
week2/: README.md  duration-prediction.ipynb  mlflow.db  week2.qmd
week3/: README.md  duration-prediction.ipynb  duration-prediction.py  run_id.txt  week3.qmd
week4/: README.md  week4.qmd
week4/batch/: random-forest.ipynb
week4/webservice/: Dockerfile  predict.py  pyproject.toml  test.py
week4/webservice-mlflow/: predict.py
week5/: README.md  docker-compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py  week5.qmd
week5/homework/: evidently_metrics_calculation.py
