[project]
name = "zcmlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hvplot>=0.11.3",
    "ipykernel>=6.29.5",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.3",
    "mlflow>=1.27.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "protobuf>=6.31.1",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost-cpu>=3.0.2",
]
