[project]
name = "zcmlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evidently==0.6.7",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "hvplot>=0.11.3",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly<6",
    "prefect>=3.4.6",
    "protobuf>=6.31.1",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost-cpu>=3.0.2",
]

[dependency-groups]
dev = [
    "requests>=2.32.3",
]
